# PizzaCalculatorAI

./: app.py  pyproject.toml  testes.ipynb
