[project]
name = "projectml"
version = "0.1.0"
description = ""
authors = [
    {name = "VitorTavares2",email = "210tavares@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "streamlit (>=1.43.2,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "notebook (>=7.3.2,<8.0.0)"
]

[tool.poetry]
packages = [{include = "projectml", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
